--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,7 +98,7 @@ a:hover,
 a:focus {
 	text-decoration: none;
 	outline: none;
-	color: #ffffff;
+	/*color: #ffffff;*/
 }
 
 ul,
@@ -757,6 +757,14 @@ ol {
 
 .hero__text p {
 	margin-bottom: 35px;
+}
+
+/*---------------------
+  Project
+-----------------------*/
+
+.project {
+    border: 1px solid black;
 }
 
 /*---------------------
