--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2930,6 +2930,30 @@ ol {
 	letter-spacing: 2px;
 }
 
+/* modal */
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1000;
+	left: 0; top: 0;
+	width: 100%; height: 100%;
+	background: rgba(0,0,0,0.6);
+}
+
+.modal-content {
+	background: #fff;
+	width: 400px;
+	padding: 20px;
+	margin: 10% auto;
+	border-radius: 8px;
+}
+
+.close {
+	float: right;
+	font-size: 24px;
+	cursor: pointer;
+}
+
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 
 @media only screen and (min-width: 1200px) {
