--- a/src/css/style.css
+++ b/src/css/style.css
@@ -161,14 +161,19 @@ ol {
 /* buttons */
 
 .primary-btn {
+	cursor: pointer;
 	display: inline-block;
 	font-size: 14px;
 	padding: 10px 28px 10px;
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: linear-gradient(to bottom, #7fad39 0%, #4F6B23 100%);
 	letter-spacing: 2px;
+}
+.primary-btn:hover {
+	color: #ffffff;
+	background: linear-gradient(to bottom, #4F6B23 0%, #7fad39 100%);
 }
 
 .site-btn {
@@ -1294,6 +1299,16 @@ ol {
 	bottom: 20px;
 }
 
+.product__discount__item {
+	cursor: pointer;
+	margin-bottom: 20px;
+}
+
+.product__discount__item:hover {
+	box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.8);
+	border: 1px solid #ebebeb;
+}
+
 .product__discount__item__pic {
 	height: 350px;
 	position: relative;
@@ -1748,17 +1763,25 @@ ol {
 }
 
 .product__details__text .heart-icon {
+	cursor: pointer;
 	display: inline-block;
 	font-size: 16px;
 	color: #6f6f6f;
 	padding: 13px 16px 13px;
 	background: #f5f5f5;
 }
+.product__details__text .heart-icon:hover {
+	color: #dd2222;
+	background: #7fad39;
+}
 
 .product__details__text ul {
-	border-top: 1px solid #ebebeb;
+	/*border-top: 1px solid #ebebeb;
 	padding-top: 40px;
-	margin-top: 50px;
+	margin-top: 50px;*/
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #ebebeb;
 }
 
 .product__details__text ul li {
